fixing content overflow issue

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -1,13 +1,20 @@
-$shadows: 2px 4px 10px 1px rgba(201, 201, 201, 0.45);
-
+$shadows: 2px 4px 10px 1px rgba(201, 201, 201, 1);
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
+}
 html {
   width: 100vw;
   max-width: 100vw;
-  overflow-x: hidden;
+  height: 100%;
   body {
     font-size: 18px;
     letter-spacing: 1px;
     line-height: 1.4;
+    width: 100%;
+    overflow-x: hidden;
   }
 }
 
